--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,17 @@
 <h1> Colocataires </h1>
-
-<app-users></app-users> 
-
+<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+    <!-- Links -->
+   <ul class="navbar-nav ">
+     <li class="nav-item " >
+       <a class="nav-link" routerLink="/users" >Users list </a>
+     </li>
+     <li class="nav-item">
+       <a class="nav-link"  routerLink="/about" > About </a>
+     </li>
+   </ul>
  
-<!--
- <app-user-detail></app-user-detail> 
- 
- -->
+
+ </nav>
+<br>
+
+<router-outlet></router-outlet>
