--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -57,12 +57,11 @@
                     </div>
                 </div>
                 <div class="footer">
-                    <div class="social-links text-center">
-                        <a href="https://creative-tim.com" class="facebook"><i class="fa fa-facebook fa-fw"></i></a>
-                        <a href="https://creative-tim.com" class="google"><i class="fa fa-google-plus fa-fw"></i></a>
-                        <a href="https://creative-tim.com" class="twitter"><i class="fa fa-twitter fa-fw"></i></a>
-                    </div>
+                    <button type="button"  [routerLink]="['/moreDetails']" routerLinkActive="router-link-active"  routerLinkActive="router-link-active" (click)="onSelect(user)" class="btn btn-primary">More details</button>
+                    <button type="button" class="btn btn-warning">write a message</button>
+
                 </div>
+                
             </div> <!-- end back panel -->
         </div> <!-- end card -->
      
